--- a/pages/notes.html
+++ b/pages/notes.html
@@ -218,78 +218,87 @@
   </nav>
   <!-- End Navigation Bar -->
 
-  <div class="d-flex align-items-center justify-content-between mb-3">
-    <h2 class="m-0">Your Notes</h2>
-    <button id="add-note-btn" class="btn btn-primary ms-3" style="white-space:nowrap;" onclick="showAddForm()">New Note</button>
-  </div>
-  <form id="add-note-form" method="post" style="display:none;" onsubmit="return submitAddForm();">
-    <div class="mb-3">
-      <label for="add-title" class="form-label">Title</label>
-      <input id="add-title" name="title" class="form-control mb-2" placeholder="Title" required>
-      <label class="form-label">Content</label>
-      <div id="add-content-editor"></div>
-      <textarea id="add-content" name="content" class="form-control" style="display:none;" required></textarea>
+  <div class="container mt-4">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>My Notes</h2>
+      <div>
+        {{if eq .userID 1}}
+        <a href="/admin/bulk-notify" class="btn btn-info me-2">Bulk Notifications</a>
+        {{end}}
+        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newNoteModal">
+          New Note
+        </button>
+      </div>
     </div>
-    <button class="btn btn-success">Save</button>
-    <button type="button" class="btn btn-link" onclick="hideAddForm()">Cancel</button>
-  </form>
-  <div class="d-flex align-items-start" style="min-height: 60vh;">
-    <!-- Left: Notes Table -->
-    <div class="flex-shrink-0" style="width: 420px;">
-      <table class="table table-striped mt-3 w-auto">
-        <thead>
-          <tr>
-            <th>No.</th>
-            <th>Title</th>
-            <th>Preview</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{ $idx := 0 }}
-          {{range .notes}}
-            {{ $idx = add $idx 1 }}
-            <tr id="note-row-{{.ID}}" class="note-row pointer" onclick="selectNote({{.ID}})">
-              <td>{{ $idx }}</td>
-              <td><strong>{{.Title}}</strong></td>
-              <td>{{preview6 .Content}}</td>
+    <form id="add-note-form" method="post" style="display:none;" onsubmit="return submitAddForm();">
+      <div class="mb-3">
+        <label for="add-title" class="form-label">Title</label>
+        <input id="add-title" name="title" class="form-control mb-2" placeholder="Title" required>
+        <label class="form-label">Content</label>
+        <div id="add-content-editor"></div>
+        <textarea id="add-content" name="content" class="form-control" style="display:none;" required></textarea>
+      </div>
+      <button class="btn btn-success">Save</button>
+      <button type="button" class="btn btn-link" onclick="hideAddForm()">Cancel</button>
+    </form>
+    <div class="d-flex align-items-start" style="min-height: 60vh;">
+      <!-- Left: Notes Table -->
+      <div class="flex-shrink-0" style="width: 420px;">
+        <table class="table table-striped mt-3 w-auto">
+          <thead>
+            <tr>
+              <th>No.</th>
+              <th>Title</th>
+              <th>Preview</th>
             </tr>
-          {{else}}
-            <tr><td colspan="3">No notes yet.</td></tr>
-          {{end}}
-        </tbody>
-      </table>
-    </div>
-    <!-- Right: Viewing/Editing Pane -->
-    <div class="flex-grow-1 ms-4" id="view-pane" style="min-width:300px;">
-      <!-- Content rendered by JS -->
-    </div>
-    <!-- Share Note Modal -->
-    <div class="modal fade" id="shareNoteModal" tabindex="-1" aria-labelledby="shareNoteModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <form id="share-note-form" method="post" action="/notes/share">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="shareNoteModalLabel">Share Note via Email</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <input type="hidden" name="note_id" id="share-note-id">
-              <div class="mb-3">
-                <label for="share-emails" class="form-label">Email Addresses</label>
-                <input type="text" class="form-control" id="share-emails" name="emails" placeholder="Enter comma-separated emails" required>
-                <div class="form-text">Separate multiple email addresses with commas.</div>
+          </thead>
+          <tbody>
+            {{ $idx := 0 }}
+            {{range .notes}}
+              {{ $idx = add $idx 1 }}
+              <tr id="note-row-{{.ID}}" class="note-row pointer" onclick="selectNote({{.ID}})">
+                <td>{{ $idx }}</td>
+                <td><strong>{{.Title}}</strong></td>
+                <td>{{preview6 .Content}}</td>
+              </tr>
+            {{else}}
+              <tr><td colspan="3">No notes yet.</td></tr>
+            {{end}}
+          </tbody>
+        </table>
+      </div>
+      <!-- Right: Viewing/Editing Pane -->
+      <div class="flex-grow-1 ms-4" id="view-pane" style="min-width:300px;">
+        <!-- Content rendered by JS -->
+      </div>
+      <!-- Share Note Modal -->
+      <div class="modal fade" id="shareNoteModal" tabindex="-1" aria-labelledby="shareNoteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <form id="share-note-form" method="post" action="/notes/share">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="shareNoteModalLabel">Share Note via Email</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
-              <div class="mb-3">
-                <label class="form-label">Public Link</label>
-                <input type="text" class="form-control" id="share-note-link" readonly>
+              <div class="modal-body">
+                <input type="hidden" name="note_id" id="share-note-id">
+                <div class="mb-3">
+                  <label for="share-emails" class="form-label">Email Addresses</label>
+                  <input type="text" class="form-control" id="share-emails" name="emails" placeholder="Enter comma-separated emails" required>
+                  <div class="form-text">Separate multiple email addresses with commas.</div>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Public Link</label>
+                  <input type="text" class="form-control" id="share-note-link" readonly>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Send Email</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
               </div>
             </div>
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-primary">Send Email</button>
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            </div>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </div>
   </div>
